@startuml

title __Graphics redactor's Class Diagram__\n


namespace sample {
    namespace model {
    }
  }

namespace sample {
    class model.Model {
    }
  }

  namespace sample {
    class model.Point {
    }
  }

  namespace sample {
    class sample.Controller {
    }
  }


  namespace sample {
    class sample.Main {
    }
  }


  sample.Controller o-- model.Point
  sample.Controller o-- model.Model
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml